--- a/themes/docdock/layouts/partials/flex/head.html
+++ b/themes/docdock/layouts/partials/flex/head.html
@@ -2,6 +2,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 {{ .Hugo.Generator }}
 <title>{{ .Title }} :: {{ .Site.Title }}</title>
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
 <link rel="shortcut icon" href="{{"images/favicon.ico" | relURL}}" type="image/x-icon" />
 <link href="{{"css/font-awesome.min.css" | relURL}}" rel="stylesheet">
 <link href="{{"css/nucleus.css" | relURL}}" rel="stylesheet">
