--- a/themes/docdock/static/scss/flex/article.scss
+++ b/themes/docdock/static/scss/flex/article.scss
@@ -21,19 +21,19 @@ article section.page {
 
 
 
-    h1:first-of-type {
-        margin: 3rem 0rem;
-        font-family: "Novacento Sans Wide", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-        text-align: center;
-        text-transform: uppercase;
-        color: #060606;
-        font-weight: 200;
-        font-size: 3.25rem;
-        line-height: 2.7rem;
-    }
+#    h1:first-of-type {
+#        margin: 3rem 0rem;
+#        font-family: "Novacento Sans Wide", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+#        text-align: center;
+#        text-transform: uppercase;
+#        color: #060606;
+#        font-weight: 200;
+#        font-size: 3.25rem;
+#        line-height: 2.7rem;
+#    }
 
-    h1 {
-        margin-top: 4rem;
+#    h1 {
+#        margin-top: 4rem;
     }
     h2 {
         margin-top: 3rem;
@@ -202,7 +202,7 @@ article section.page {
     -ms-transition: color 0.35s ease;
     transition: color 0.35s ease;
 }
-
+h1:hover .anchor,
 h2:hover .anchor,
 h3:hover .anchor,
 h4:hover .anchor,
