--- a/layouts/partials/custom-head.html
+++ b/layouts/partials/custom-head.html
@@ -6,14 +6,9 @@
 
   ga('create', 'UA-79101-13', 'auto');
   ga('send', 'pageview');
-
 </script>
 
-<script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
-
-<script type="text/x-mathjax-config">
+<script type="text/x-mathjax-config" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
 MathJax.Hub.Config({
   tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
 });
